# ot-harjoitustyo

./: README.md  pyproject.toml  tasks.py
docs/: vaatimusmaarittely.md
dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  tuntikirjanpito.md  vaatimusmaarittely.md
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: monopoli.md  sekvenssikaavio.md
src/: main.py
src/game/: grid.py  square.py  tetromino.py
src/tests/: grid_test.py  main_test.py  tetromino_test.py
src/ui/: window.py
